--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "@intlify/unplugin-vue-i18n": "^3.0.1",
   "@tailwindcss/container-queries": "^0.1.1",
   "@tailwindcss/typography": "^0.5.10",
+  "@tailwindcss/vite": "4.0.0-alpha.6",
   "@vueuse/components": "^10.9.0",
   "@vueuse/core": "^10.9.0",
   "@vueuse/integrations": "^10.9.0",
@@ -57,7 +58,7 @@
   "pinia": "^2.1.7",
   "postcss": "^8.4.35",
   "splitpanes": "^3.1.5",
-  "tailwindcss": "^3.4.1",
+  "tailwindcss": "4.0.0-alpha.6",
   "unplugin-auto-import": "^0.17.5",
   "unplugin-icons": "^0.18.5",
   "unplugin-vue-components": "^0.26.0",
