--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,11 @@ services:
     environment:
       - DOZZLE_FILTER=name=custom_base
       - DOZZLE_BASE=/foobarbase
-      - DOZZLE_NO_ANALYTICS=1
       - DOZZLE_HOSTNAME=custom name
     ports:
       - 8080:8080
-    build:
-      context: .
+    extends: dozzle_build
+
   simple-auth:
     container_name: simple-auth
     volumes:
@@ -19,31 +18,27 @@ services:
       - ./e2e/data:/data
     environment:
       - DOZZLE_AUTH_PROVIDER=simple
-      - DOZZLE_NO_ANALYTICS=1
-    build:
-      context: .
+    extends: dozzle_build
+
   dozzle:
     container_name: dozzle
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - DOZZLE_FILTER=name=dozzle
-      - DOZZLE_NO_ANALYTICS=1
       - DOZZLE_HOSTNAME=localhost
     ports:
       - 7070:8080
-    build:
-      context: .
+    extends: dozzle_build
+
   remote:
     container_name: remote
     environment:
       - DOZZLE_REMOTE_HOST=tcp://proxy:2375|remote-host
       - DOZZLE_FILTER=name=dozzle
-      - DOZZLE_NO_ANALYTICS=1
     ports:
       - 5050:8080
-    build:
-      context: .
+    extends: dozzle_build
     depends_on:
       proxy:
         condition: service_healthy
@@ -51,12 +46,10 @@ services:
     container_name: with-agent
     environment:
       - DOZZLE_REMOTE_AGENT=agent:7007
-      - DOZZLE_NO_ANALYTICS=1
       - DOZZLE_LEVEL=debug
     ports:
       - 8082:8080
-    build:
-      context: .
+    extends: dozzle_build
     depends_on:
       agent:
         condition: service_healthy
@@ -65,7 +58,6 @@ services:
     command: agent
     environment:
       - DOZZLE_FILTER=name=dozzle
-      - DOZZLE_NO_ANALYTICS=1
     healthcheck:
       test: ["CMD", "/dozzle", "healthcheck"]
       interval: 5s
@@ -74,8 +66,8 @@ services:
       start_interval: 5s
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    build:
-      context: .
+    extends: dozzle_build
+
   proxy:
     container_name: proxy
     image: tecnativa/docker-socket-proxy
@@ -106,3 +98,16 @@ services:
       - dozzle
       - custom_base
       - remote
+  dozzle_build:
+    build:
+      context: .
+      secrets:
+        - shared_cert.pem
+        - shared_key.pem
+    environment:
+      - DOZZLE_NO_ANALYTICS=1
+secrets:
+  shared_cert.pem:
+    file: ./shared_cert.pem
+  shared_key.pem:
+    file: ./shared_key.pem
